themes/cloudappify/assets/store.css
/*
  title: store css
  author: maximilian schoening (@mschoening)
*/

/* =index
---------------------------------------------- */
#index #plans {
  text-align: center;
}

#index #plans hgroup {
  background: url('index-hgroup-bg.png') center top no-repeat;
  margin: 0 0 32px 0;
  padding: 180px 0 0 0;
}

#index #plans ul {
  list-style: none;
}

#index #plans ul li {
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
}

#index #plans ul li .check {
  background: url('plans-feature-checkmark.png') left center no-repeat;
  padding: 0 24px;
}

#index #plans ul li .check .compare {
  color: #e5e5e5;
  text-decoration: line-through;
}

#index #plans form fieldset {
  background: #eee;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  margin: 0 0 8px 0;
  padding: 3px;
}

#index #plans form fieldset > div {
  background: -moz-linear-gradient(top, #fafafa, #f9f9f9);
  background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#f9f9f9));
  background: linear-gradient(top, #fafafa, #f9f9f9);
  border: 1px solid #d9d9d9;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  padding: 24px;
}

#index #plans form fieldset > div label {
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  font-weight: normal;
  margin: 0 24px;
}

#index #plans form fieldset > div label:hover {
  cursor: pointer;
}

#index #plans form fieldset > div label .compare {
  color: #a7a7a7;
  text-decoration: line-through;
}

#index #plans form fieldset + p {
  color: #a7a7a7;
  margin: 0 0 12px 0;
}

#index #plans form p input[type="submit"] {
  display: inline;
  font-size: 18px;
}

#index #faqs {
  padding: 48px 0 0 0;
}

#index #faqs .row {
  margin: 0 0 32px 0;
}

#index #faqs .row:last-child {
  margin: 0;
}

#index #faqs .row .column {
  float: left;
  margin: 0 48px 0 0;
  width: 288px;
}

#index #faqs .row .column:last-child {
  margin: 0;
}

#index #faqs .row .column dt {
  font-size: 14px;
  margin: 0 0 14px 0;
}

#index #faqs .row .column dd {
  color: #a7a7a7;
  line-height: 22px;
}
/* ------------------------------------------- */

/* =cart
---------------------------------------------- */
#cart aside {
  border-top: 1px solid #e5e5e5;
  float: left;
  margin: 0 32px 0 0;
  padding: 12px 0 0 0;
  width: 204px;
}

#cart form {
  float: left;
  width: 724px;
}

#cart form table {
  width: 100%;
}

#cart form table thead tr th {
  border-bottom: 1px solid #e5e5e5;
  border-top: 1px solid #e5e5e5;
  font-size: 14px;
  font-weight: bold;
  padding: 12px 8px;
  text-align: center;
}

#cart form table thead tr th:first-child {
  text-align: left;
}

#cart form table thead tr th:last-child {
  text-align: right;
}

#cart form table tbody tr td {
  border-bottom: 1px solid #e5e5e5;
  font-size: 13px;
  padding: 12px 8px;
  text-align: center;
}

#cart form table tbody tr td:first-child {
  text-align: left;
}

#cart form table tbody tr td:last-child {
  text-align :right;
}

#cart form table tbody tr .quantity {
  width: 60px;
}

#cart form table tbody tr .quantity input[type="text"] {
  text-align: center;
  width: 46px;
}

#cart form table tfoot tr td {
  font-size: 24px;
  padding: 24px 8px;
  text-align: right;
}

#cart #update {
  margin: 0 12px 0 0;
}

#cart #checkout {
  margin: 0 8px 0 0;
}
/* ------------------------------------------- */

